# git-branches

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: aur.yml  homebrew.yml
Formula/: git-branches.rb
aur/: PKGBUILD
contrib/: _git-branches  git-branches.bash  git-branches.fish  git-branches.zsh
git_branch_list/: branch_builders.py  cli.py  commands.py  completion.py  enhanced_preview.py  fzf_ui.py  git_ops.py  github.py  interactive.py  jira_integration.py  parsers.py  pr_handlers.py  render.py  status_preview.py  utils.py  worktrees.py
hack/: make-release.sh
tests/: conftest.py  test_fzf_ui.py  test_git_branch_list.py  test_git_ops.py  test_github_misc.py  test_progress.py  test_render_misc.py  test_worktrees.py
