[project]
name = "git-branches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.4"]

[project.scripts]
git-branches = "git_branch_list.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["git_branches.egg-info", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = ["isort>=6.0.1", "pytest>=8.4.1", "ruff>=0.12.8"]
